--- a/mydemoproject/src/Component/topbar/topbar.css
+++ b/mydemoproject/src/Component/topbar/topbar.css
@@ -1,16 +1,15 @@
 .topbarContainer{
     height: 70px;
     width: 100%;
-    background-color: lightseagreen;
+    background-color: rgb(76, 209, 209);
     display: flex;
     align-items: center;
-    position: sticky;
+    position: relative;
     top: 0;
     border-radius: 100px;
-    mix-blend-mode: color;
 }
 .topbarLeft{
-    flex: 5;
+    flex: 2;
 }
 .logo{
     font-size: 27px;
@@ -19,10 +18,14 @@
     cursor: pointer;
     font-family: Georgia, 'Times New Roman', Times, serif;
     border: none;
+    color: black;
+    position: fixed;
+    margin-top: -15px;
 }
 .topbarCenter{
     flex: 5;
     border-radius: 50px;
+    position: center;
 }
 .searchbar{
     width: 100%;
@@ -36,6 +39,7 @@
     font-size: 20px;
     font-weight: bolder;
     margin-left: 20px;
+    color: thistle;
 }
 .searchInput{
     border: none;
@@ -45,16 +49,19 @@
     outline: none;
 }
 .topbarRight{
-    flex: 4;
-    display: flex;
-    align-items: center;
+    display: contents;
+    align-items: end;
     justify-content: space-around;
+    margin-right: 3px;
+    flex: 4;
+    position: fixed;
 }
 .topbarlink{
     margin-right: 10px;
-    font-size: 16px;
+    font-weight: 600;
     cursor: pointer;
-}  
+    color: crimson;
+}
 .topbarIcons{
     display: flex;
 }    
@@ -62,24 +69,27 @@
     margin-right: 15px;
     cursor: pointer;
     position: relative;
+    color: crimson;
+    display: flex;
 }
 .tobarIconBadge{
-    
     width: 15px;
     height: 15px;
-    background-color: red;
     border-radius: 50%;
     position: absolute;
+    background-color: rgb(14, 12, 12);
     top: -5px;
     right: -9px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 12px;
+    font-weight: bolder;
+    color: whitesmoke;
 }
 .topbarImg{
     width: 36px;
     height: 36px;
-    border-radius: 50%;
+    border-radius: 60%;
     cursor: pointer;
 }
