--- a/mydemoproject/src/Component/leftbar/leftbar.css
+++ b/mydemoproject/src/Component/leftbar/leftbar.css
@@ -15,6 +15,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    font-size: medium;
+    color: rgb(19, 95, 131);
 }
 .leftbarIcon{    
     margin-right: 15px;
@@ -38,6 +40,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 15px;
+    color: cadetblue;
+    font-weight: 700;
 }
 .leftbarFriendImg{
     width: 32px;
