--- a/mydemoproject/src/Component/post/post.css
+++ b/mydemoproject/src/Component/post/post.css
@@ -27,13 +27,20 @@
     font-size: 15px;
     font-weight: 500;
     margin: 0 10px;
+    color: orangered;
 }  
 .postDate{
     font-size: 12px;
+    color: rosybrown;
 } 
 .postCenter{
     margin: 20px 0;
-}   
+}
+.postText{
+    color: black;
+    font-weight: bold;
+    font-size: medium;
+}
 .postImg{
     margin-top: 20px;
     width: 100%;
