--- a/regproject/registrationform/src/form.css
+++ b/regproject/registrationform/src/form.css
@@ -27,8 +27,7 @@ textarea{
 }
 #firstname,#lastname,#mobilenumber,#email,#password,#confpassword,#dob,#Select-State,#select-course{
     width: 60%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 20px, 20px;
     height: 30px;
     font-style: italic;
     text-align: center;
